Fixing pointer on tablet

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (hover: none) and (pointer: coarse) {
 .custom-cursor {
     display: none;
 }
